tests/marouter/errors/false_options/testsuite.marouter
# The output file name is not given
missing_output

# The output can not be build
false_output


# The network file name is not given
missing_net

# The network can not be found
false_net


# The input file name is not given
missing_input

# The inputcan not be found
false_input


